Fix #112683: Removing the last Annotations layer produces a warning.

After removing the last Annotations layer, the current GPencil block
needs to be freed.

Pull Request: https://projects.blender.org/blender/blender/pulls/113274